<resources>
    <string name="app_name">MTGCardPriceApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Card Adapter List -->
    <string name="adapter_card_name">Card name %1$s</string>
    <string name="adapter_card_price">Price: %1$s %2$s</string>
    <string name="adapter_card_foil">Foil price: %1$s %2$s</string>
    <string name="adapter_card_isFoil">Is card foil: %1$s</string>
    <string name="adapter_card_removed">Card was removed</string>
    <!-- END Card List-->
    <!-- MENU -->
    <string name="action_search">Search</string>
    <string name="search_hint">Card Name</string>
    <!-- END MENU -->
    <!-- Single Card View -->
    <string name="single_card_price">Prices</string>
    <string name="single_card_price_high">High : %1$s %2$s</string>
    <string name="single_card_price_medium">Medium : %1$s %2$s</string>
    <string name="single_card_price_low">Low : %1$s %2$s</string>
    <string name="single_card_price_foil">Foil : %1$s %2$s</string>
    <string name="single_card_is_foil">Is Foil</string>
    <string name="single_card_add_draft_list">Add to draft list</string>
    <string name="single_card_add_card_list">Add to card list</string>
    <string name="single_card_add_button">Add </string>
    <string name="single_card_name">Card name: %1$s</string>
    <string name="single_card_toast_info">Card Added</string>
    <!-- End single card view -->
    <!--Settings -->
    <string name="settings_tutorial">Tutorial</string>
    <string name="settings_add_list">Add new list:</string>
    <string name="settings_remove_list">Remove list:</string>
    <string name="settings_add">Add</string>
    <string name="settings_accept">Ok</string>
    <string name="settings_remove">Remove</string>
    <string name="settings_page_price">Choose price from:</string>
    <string name="settings_list_name_empty">This name for list cannot be used</string>
    <string name="settings_list_added_info">List was added</string>
    <string name="settings_list_remove_info">List was removed</string>
    <string name="settings_list_name_cannot_remove">List cannot be removed</string>

    <!-- End Settings-->
    <!-- Card Draft -->
    <string name="draft_sort_asc">Price ascending</string>
    <string name="draft_sort_desc">Price descending</string>
    <!-- END Card Draft -->
    <!-- Database Config -->
    <string name="database_predefined_list">Card List</string>
    <!--END Database Config -->
    <!--Common -->
    <string name="empty_list">Empty</string>
    <!--End Common -->
</resources>
