<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Switch
        android:id="@+id/settings_tutorialSwitch"
        style="@style/textView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/settings_tutorial" />

    <TextView
        android:id="@+id/settings_addListTextView"
        style="@style/textView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/settings_tutorialSwitch"
        android:layout_marginBottom="@dimen/text_view_padding_large"
        android:layout_marginTop="@dimen/text_view_padding_large"
        android:text="@string/settings_add_list"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <LinearLayout
        android:id="@+id/settings_addListHolder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/settings_addListTextView"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/settings_addListEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.7" />

        <Button
            android:id="@+id/settings_addListButton"
            style="@style/button"
            android:layout_width="0dp"

            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:text="@string/settings_add" />
    </LinearLayout>

    <TextView
        android:id="@+id/settings_portalPriceTextView"
        style="@style/textView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/settings_addListHolder"
        android:layout_marginBottom="@dimen/text_view_padding_large"
        android:layout_marginTop="@dimen/text_view_padding_large"
        android:text="@string/settings_page_price"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <LinearLayout
        android:id="@+id/settings_pagePriceHolder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/settings_portalPriceTextView"
        android:orientation="horizontal">

        <Spinner
            android:id="@+id/settings_pagePriceSpinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0.7" />

        <Button
            android:id="@+id/settings_pagePriceButton"
            style="@style/button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:text="@string/settings_accept" />
    </LinearLayout>
</RelativeLayout>