<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/singleCard_cardNameTextView"
        style="@style/textView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/text_view_padding"
        android:paddingTop="@dimen/text_view_padding"
        android:text="Large Text"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/singleCard_priceTextView"
        style="@style/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/singleCard_cardNameTextView"
        android:paddingBottom="@dimen/text_view_padding"
        android:paddingTop="@dimen/text_view_padding"
        android:text="@string/single_card_price" />

    <LinearLayout
        android:id="@+id/singleCard_priceHolder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/singleCard_priceTextView"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/text_view_padding"
        android:paddingTop="@dimen/text_view_padding">

        <TextView
            android:id="@+id/singleCard_priceHighTextView"
            style="@style/textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:text="New Text" />

        <TextView
            android:id="@+id/singleCard_priceMediumTextView"
            style="@style/textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:text="New Text" />

        <TextView
            android:id="@+id/singleCard_priceLowTextView"
            style="@style/textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:text="New Text" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/singleCard_foilHolder"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/singleCard_priceHolder"
        android:paddingBottom="@dimen/text_view_padding"
        android:paddingTop="@dimen/text_view_padding">

        <TextView
            android:id="@+id/singleCard_priceFoilTextView"
            style="@style/textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="New Text" />

        <CheckBox
            android:id="@+id/singleCard_isFoilCheckBox"
            style="@style/textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/single_card_is_foil" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/singleCard_predefinedListHolder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/singleCard_foilHolder"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/text_view_padding"
        android:paddingTop="@dimen/text_view_padding">

        <TextView
            android:id="@+id/singleCard_addDraftList"
            style="@style/textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:drawableLeft="@drawable/ic_add_button"
            android:text="@string/single_card_add_draft_list"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/singleCard_addCardList"
            style="@style/textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:drawableLeft="@drawable/ic_add_button"
            android:text="@string/single_card_add_card_list"
            android:textAppearance="?android:attr/textAppearanceLarge" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/singleCard_predefinedListHolder"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/text_view_padding"
        android:paddingTop="@dimen/text_view_padding">

        <Spinner
            android:id="@+id/singleCard_customListSpinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.7" />

        <Button
            android:id="@+id/singleCard_addCardToListButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:text="@string/single_card_add_button" />
    </LinearLayout>
</RelativeLayout>